--- a/index.html
+++ b/index.html
@@ -4,92 +4,100 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
     />
 
-    <link rel="icon" href="devchallenges.png" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
+    <link rel="icon" href="img/devchallenges.png" />
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
+    <link rel="stylesheet" href="style.css" />
 
-      ul {
-        padding-left: 24px;
-      }
+    <title>My team page</title>
 
-      li {
-        margin-bottom: 8px;
+    <script>
+      function toggleTheme() {
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          document.body.classList.toggle("light-theme");
+        } else {
+          document.body.classList.toggle("dark-theme");
+        }
       }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    </script>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
+    <header>
+      <div class="title"><h1>The creative crew</h1></div>
+      <div class="description">
+        <h2>Who we are</h2>
         <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
+          We are team of creatively diverse, performance driven, innovative
+          individuals working in various locations from the world.
         </p>
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+    </header>
+    <div class="page">
+      <div class="grid-container">
+        <div class="badge up">
+          <div class="image-and-side-caption">
+            <img src="img/photo1.png" />
+            <p class="side-caption">Product owner</p>
+          </div>
+          <p class="bottom-caption">Bill Mahoney</p>
+        </div>
+        <div class="badge down">
+          <div class="image-and-side-caption">
+            <img src="img/photo2.png" />
+            <p class="side-caption">Art director</p>
+          </div>
+          <p class="bottom-caption">Saba Cabrera</p>
+        </div>
+        <div class="badge up">
+          <div class="image-and-side-caption">
+            <img src="img/photo3.png" />
+            <p class="side-caption">Tech lead</p>
+          </div>
+          <p class="bottom-caption">Shae Le</p>
+        </div>
+        <div class="badge up">
+          <div class="image-and-side-caption">
+            <img src="img/photo4.png" />
+            <p class="side-caption">Ux designer</p>
+          </div>
+          <p class="bottom-caption">Skylah Lu</p>
+        </div>
+        <div class="badge down">
+          <div class="image-and-side-caption">
+            <img src="img/photo5.png" />
+            <p class="side-caption">Developer</p>
+          </div>
+          <p class="bottom-caption">Griff Richards</p>
+        </div>
+        <div class="badge up">
+          <div class="image-and-side-caption">
+            <img src="img/photo6.png" />
+            <p class="side-caption">Developer</p>
+          </div>
+          <p class="bottom-caption">Stan John</p>
+        </div>
+      </div>
     </div>
+    <footer>
+      created by <b><u>danfloyd111</u></b> -
+      <a
+        href="https://devchallenges.io"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        devChallenges.io
+      </a>
+      -
+      <a href="#" onclick="toggleTheme()">Toggle dark/light theme</a>
+    </footer>
   </body>
 </html>
