Add media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -43,42 +43,42 @@
     </header>
     <div class="page">
       <div class="grid-container">
-        <div class="badge up">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo1.png" />
             <p class="side-caption">Product owner</p>
           </div>
           <p class="bottom-caption">Bill Mahoney</p>
         </div>
-        <div class="badge down">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo2.png" />
             <p class="side-caption">Art director</p>
           </div>
           <p class="bottom-caption">Saba Cabrera</p>
         </div>
-        <div class="badge up">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo3.png" />
             <p class="side-caption">Tech lead</p>
           </div>
           <p class="bottom-caption">Shae Le</p>
         </div>
-        <div class="badge up">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo4.png" />
             <p class="side-caption">Ux designer</p>
           </div>
           <p class="bottom-caption">Skylah Lu</p>
         </div>
-        <div class="badge down">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo5.png" />
             <p class="side-caption">Developer</p>
           </div>
           <p class="bottom-caption">Griff Richards</p>
         </div>
-        <div class="badge up">
+        <div class="badge">
           <div class="image-and-side-caption">
             <img src="img/photo6.png" />
             <p class="side-caption">Developer</p>
